--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs": "^0.0.1-security",
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "uuid": "^11.1.0"
   }
 }
