--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
