--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,50 @@
 {
-  "name": "backendq",
+  "name": "control-horario-api",
   "version": "1.0.0",
-  "description": "An application to manage worker records.",
-  "main": "index.js",
+  "description": "API para el sistema de control de horarios de personal.",
+  "main": "src/index.js",
   "type": "module",
-  "bin": {
-    "worker-records-app": "./src/index.js"
-  },
   "scripts": {
-    "dev": "node --watch ./src/index.js",
-    "start": "node ./src/index.js",
-    "install:ci": "npm ci"
+    "dev": "node --watch src/index.js",
+    "start": "node src/index.js",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "test": "echo \"Error: no test specified\" && exit 0",
+    "install:ci": "npm ci",
+    "db:migrate": "sequelize-cli db:migrate",
+    "db:seed:all": "sequelize-cli db:seed:all",
+    "db:migrate:undo": "sequelize-cli db:migrate:undo"
   },
   "keywords": [
-    "workers",
-    "records",
-    "management"
+    "horarios",
+    "personal",
+    "api",
+    "seguimiento",
+    "nodejs",
+    "express",
+    "sequelize"
   ],
   "author": "Juan Marcelo Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "express-validator": "^7.2.1",
-    "fs": "^0.0.1-security",
-    "mysql2": "^3.14.0",
-    "path": "^0.12.7",
-    "sequelize": "^6.37.7",
-    "uuid": "^11.1.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-validator": "^7.1.0",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.0",
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^3.1.2",
+    "prettier": "^3.3.0",
+    "sequelize-cli": "^6.6.2"
   }
 }
